--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
-    "typescript": "~2.5.3",
     "express": "^4.16.2",
     "http": "0.0.0",
+    "jquery": "^1.9.1",
     "path": "^0.12.7",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
+    "typescript": "~2.5.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
