--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "mongoose": "^5.0.10",
     "multer": "^1.3.0",
     "ngx-quill-editor": "^2.2.2",
     "nodemon": "^1.17.1",
